hphp/test/slow/reified_generics/param-verification-10.php.expectf
Catchable fatal error: Argument 1 passed to C::f() must be an instance of A<int, int>, given A<int,string> in %s on line 11
